components/go-analysis/fixtures/bad/suppression-reason/go.mod
module example.com/standards/bad/suppression-reason

go 1.23
